Fix the dark mode and switch the syntax highlighter from highlight.js to prism.js (#1652)
* feat: Switched from highlight.js to prism.js and fixed the dark mode

* fix: Fixed broken links

* fix: Disabled breaks in Markdown

* feat: Improved the syntax highlighting for K

--- a/web/static_content/assets/sass/components/_sidebar.scss
+++ b/web/static_content/assets/sass/components/_sidebar.scss
@@ -115,6 +115,13 @@
     color: rgba(0, 0, 0, 0.85);
     text-decoration: none;
   }
+
+  @media screen and (prefers-color-scheme: dark) {
+    color: $dark-mode-fg;
+    &:hover {
+      color: $dark-mode-gray;
+    }
+  }
 }
 
 .bd-toc-item {
